# Inventory-Management-System-Project

./: .gitignore  CMakeLists.txt  Inventory.cpp  Inventory.h  InventoryManagementCesarGall.pro  Order.cpp  Order.h  Orders.csv  Product.cpp  Product.h  Products.csv  Products_Suppliers_map.csv  README.md  Supplier.cpp  Supplier.h  Suppliers.csv  User.cpp  User.h  main.cpp  mainwindow.cpp  mainwindow.h  my_program
